# kittens_exhibition

./: README.md
backend/: Dockerfile  pyproject.toml
backend/api/: permissions.py  serializers.py  urls.py  views.py
backend/kittens/: admin.py  models.py
backend/kittens/migrations/: 0001_initial.py  0002_kitten_owner.py  0003_rate.py
backend/kittens_exhibition/: asgi.py  settings.py  urls.py  wsgi.py
infra/: .env.example  docker-compose.yml
infra/nginx/: default.conf
